@@ -1,6 +1,10 @@
 === xdg-utils 1.x.x ====
 
 2009-07-28 Fathi Boudra <fabo@freedesktop.org>
+    * Remove fixup_mandriva_categories() function. It is not needed anymore
+	  since a year. Thanks to Nicolas Lécureil <neoclust@mandriva.org>
+
+2009-07-28 Fathi Boudra <fabo@freedesktop.org>
     * Merge xdg-settings utility: a script to get various settings from
       the desktop environment. Thanks to Dan Kegel and Google Inc.
 
